--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,86 @@
 /* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: pink;
+$darkBlue: rgba(113, 148, 212, .9);
+$lightBlue: rgba(198, 205, 247, 1);
+$brown: rgba(217, 164, 152, 1);
+$pink: rgba(230, 160, 196, 1);
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Ibarra Real Nova', serif;
+}
+
+html {
+  height: 100%;
+}
 
 body {
-  background-color: $primary-background;
+  background: url(../images/purple-mountain.jpg);
+  background-size: cover;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.login {
+  background: linear-gradient($darkBlue, $darkBlue);
+  height: 60%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2%; 
+}
+
+.login-img {
+  height: 50%;
+  width: 50%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 50%;
+  width: 80%;
+}
+
+.login-username,
+.login-password {
+  font-size: 1.5em;
+  height: 25%;
+  border: 1px solid $lightBlue;
+  color: $brown;
+  border-radius: 0.1rem;
+  background: transparent;
+  transition: box-shadow 300ms;
+  padding-left: 5%;
+
+  &:focus {
+    outline: none;
+    border: none;
+    box-shadow: 0.2rem 0.4rem 0.8rem $lightBlue;
+  }
+}
+
+::placeholder {
+  color: $lightBlue;
+}
+
+.login-submit {
+  color: $lightBlue;
+  font-size: 2em;
+  text-decoration: none;
+  background: transparent;
+  border-radius: 5px;
+  border: none;
+  transition: all 0.4s ease 0s;
+
+  &:hover {
+    color: $brown;
+    // box-shadow: 5px 40px -10px;
+    transition: all 0.4s ease 0s;
+  }
 }
