--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -94,6 +94,7 @@ body {
   display: flex;
   flex-direction: column;
   border-radius: 10%; 
+  background: linear-gradient($black, $black);
 }
 
 .nav {
@@ -128,13 +129,22 @@ body {
     background: linear-gradient($darkBlue, $darkBlue); 
 }
 
+.dash-card-list {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  overflow: scroll;
+}
+
 .dash {
   height: 85%;
   width: 100%;
   background: linear-gradient($black, $black); 
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
   overflow: scroll;
 }
@@ -160,3 +170,30 @@ body {
   color: $lightBlue;
 }
 
+.dash-form {
+  height: 15%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  
+  label {
+    color: $lightBlue;
+    font-size: 1.5em;
+  }
+
+  .dash-input-date,
+  .dash-select {
+    height: 40%;
+    width: 35%;
+    font-size: 1em;
+    border-radius: 2%;
+  }
+}
+
+.dash-results {
+  height: 85%;
+  width: 100%;
+  overflow: scroll;
+}
