--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -52,7 +52,8 @@ body {
 }
 
 .login-username,
-.login-password {
+.login-password,
+.form-input-user {
   font-size: 1.5em;
   height: 25%;
   border: 1px solid $lightBlue;
@@ -123,10 +124,10 @@ body {
 }
 
 .nav-logo {
-    width: 10%;
-    height: 100%;
-    border-bottom: 3px solid $brown;
-    background: linear-gradient($darkBlue, $darkBlue); 
+  width: 10%;
+  height: 100%;
+  border-bottom: 3px solid $brown;
+  background: linear-gradient($darkBlue, $darkBlue); 
 }
 
 .dash-card-list {
@@ -142,7 +143,6 @@ body {
 .dash {
   height: 85%;
   width: 100%;
-  background: linear-gradient($black, $black); 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -189,7 +189,8 @@ body {
   justify-content: space-around;
   align-items: center;
   
-  label {
+  label,
+  h3 {
     color: $lightBlue;
     font-size: 1.5em;
   }
