Add apology message when fully booked

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -212,4 +212,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  h2 {
+    width: 80%;
+    height: 80%;
+    color: $lightBlue;
+  }
 }
