--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,7 +1,19 @@
 $darkBlue: rgba(113, 148, 212, .7);
+$darkBlueOpg: rgba(113, 148, 212, .9);
 $lightBlue: rgba(198, 205, 247, 1);
 $brown: rgba(217, 164, 152, 1);
 $pink: rgba(230, 160, 196, 1);
 $black: rgba(0, 0, 0, .7);
 $mountainBack: url(../images/purple-mountain.jpg);
 $treesBack: url(../images/hillside-hotel.jpg);
+
+@mixin heightWidth($height, $width) {
+    height: $height;
+    width: $width;
+}
+
+@mixin flexDirCenter($dir) {
+    display: flex;
+    flex-direction: $dir;
+    align-items: center;
+}
