--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -1,24 +1,18 @@
 .login {
   background: linear-gradient($darkBlue, $darkBlue);
-  height: 60%;
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include heightWidth(60%, 40%);
+  @include flexDirCenter(column);
   border-radius: 2%; 
 }
 
 .login-img {
-  height: 50%;
-  width: 50%;
+  @include heightWidth(50%, 50%);
 }
 
 .login-form {
-  display: flex;
-  flex-direction: column;
   justify-content: space-around;
-  height: 50%;
-  width: 80%;
+  @include flexDirCenter(column);
+  @include heightWidth(50%, 80%);
 }
 
 .login-username,
