Restructure file tree to eliminate unused files

--- a/src/css/_interface.scss
+++ b/src/css/_interface.scss
@@ -126,7 +126,8 @@
   height: 40%;
 }
 
-.dash-button-book {
+.dash-button-book,
+.dash-button-delete {
   @extend .login-submit;  
   background-color: $darkBlue; 
 }
